--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -24,11 +24,7 @@
       color: white;
     }
   </style>
-
-  <script>
-    let js = "amazing";
-    if (js === "amazing") alert("JavaScript is FUN!");
-  </script>
+  <script src="script.js" defer> </script>
 </head>
 
 <body>
